--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "@types/three": "^0.181.0",
+    "@vercel/analytics": "^1.6.0",
+    "@vercel/speed-insights": "^1.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lenis": "^1.3.15",
